--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dev",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://fooddeliver-backend2024.herokuapp.com",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
